[package]
name = "webtab-mining"
version = "0.1.0"
edition = "2021"
authors = ["Kayoosh Studio"]

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
rusqlite = { version = "0.30", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dotenv = "0.15"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true